gitops/apps/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
  - name: public
    namespace: istio-system
    sectionName: https
  hostnames:
  - vaultwarden.didactiklabs.io
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 80
