gitops/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: root-didactiklabs
  labels:
    probe: enabled
spec:
  rules:
    - host: 'vaultwarden.didactik.labs'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
  tls:
    - hosts:
        - 'vaultwarden.didactik.labs'
      secretName: vaultwarden-tls
